added paragraph and header

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Homework repo</title>
   </head>
   <body>
-    Hello World
+    <h1>Hello World</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur
+      nobis laboriosam sequi quod debitis? Quae error ratione tenetur, officia
+      omnis, ullam corporis sunt officiis commodi voluptatum tempore autem dicta
+      ipsum.
+    </p>
   </body>
 </html>
